--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,16 @@
-[tool.poetry]
+[project]
 name = "pathtmpl"
 version = "0.2.1"
 description = "Path Template"
-authors = ["Eugen Ciur <eugen@papermerge.com>"]
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.13"
-jinja2 = "^3.1.4"
-pydantic = "^2.9"
-
+requires-python = ">=3.13"
+authors = [
+    { name = "Eugen Ciur", email = "eugen@papermerge.com" }
+]
+dependencies = [
+    "jinja2>=3.1.4,<4",
+    "pydantic>=2.9,<3",
+]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
