--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,12 @@ authors = [
     { name = "Eugen Ciur", email = "eugen@papermerge.com" }
 ]
 dependencies = [
-    "jinja2>=3.1.4,<4",
-    "pydantic>=2.9,<3",
+    "jinja2",
+    "pydantic"
 ]
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.3.3"
+pytest = "*"
 
 [build-system]
 requires = ["poetry-core"]
