Switch from poetry to uv

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,13 @@
 *.pid
 .idea/
 .env
-.envrc
 build/
 .eggs/
 .venv
 *.pyc
 __pycache__
 *.log
-*.sqlite3
-*.db
-*.png~
 dist
 _build
-celerybeat-schedule
 .vscode
+.envok.yaml
