--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,11 @@ dependencies = [
     "pydantic"
 ]
 
-[tool.poetry.group.dev.dependencies]
-pytest = "*"
+[dependency-groups]
+dev = [
+    "pytest",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
