--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,15 +14,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v6
       with:
-        python-version: '3.13'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
+        python-version: '3.14'
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
     - name: Publish package
       env:
         PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-        PIP_DEFAULT_TIMEOUT: '100'
       run: |
-        poetry config pypi-token.pypi $PYPI_TOKEN
-        poetry publish --build
+        uv build
+        uv publish --token $PYPI_TOKEN
