--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,12 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Set up Python 3.13
+      - name: Set up Python 3.14
         uses: actions/setup-python@v6
         with:
-          python-version: "3.13"
+          python-version: "3.14"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
       - name: Run Tests
         run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry install && poetry run pytest
+          uv sync --group dev
+          uv run pytest
